// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar should render ProcoreCompanies tab selected 1`] = `
<div>
  <nav
    aria-label="mailbox folders"
  >
    <div
      class="PrivateHiddenCss-smUp-76"
    />
    <div
      class="PrivateHiddenCss-xsDown-74"
    >
      <div
        class="MuiDrawer-root MuiDrawer-docked"
      >
        <div
          class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
        >
          <div
            class="makeStyles-container-70"
          >
            <span
              class="makeStyles-logo-71"
            >
              <svg>
                fc.logo.svg
              </svg>
            </span>
            <div
              class="MuiTabs-root MuiTabs-vertical"
              data-testid="sidebar-wrapper"
            >
              <div
                class="MuiTabs-scroller MuiTabs-fixed"
                style="overflow: hidden;"
              >
                <div
                  aria-label="Sidebar Tabs"
                  class="MuiTabs-flexContainer MuiTabs-flexContainerVertical"
                  role="tablist"
                >
                  <a
                    aria-controls="tabpanel-0"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-0"
                    href="/"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        dashboard.svg
                      </svg>
                      Dashboard
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-1"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-1"
                    href="/projects"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        projects.svg
                      </svg>
                      Projects
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-2"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-2"
                    href="/clients"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        clients.svg
                      </svg>
                      Clients
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-3"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-3"
                    href="/workers"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        workers.svg
                      </svg>
                      Workers
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-4"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-4"
                    href="/invoices"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        invoice.svg
                      </svg>
                      Invoices
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-5"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-5"
                    href="/inventory"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        inventory.svg
                      </svg>
                      Inventory
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-6"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-6"
                    href="/reports"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        reports.svg
                      </svg>
                      Reports
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-7"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-7"
                    href="/security"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        security.svg
                      </svg>
                      Security
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <div
                    class="MuiBox-root MuiBox-root-87"
                    style="margin-top: auto;"
                  >
                    <a
                      aria-controls="tabpanel-8"
                      aria-disabled="false"
                      aria-selected="true"
                      class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-labelIcon"
                      data-testid="tab-8"
                      href="/admin"
                      role="tab"
                      tabindex="0"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        <svg>
                          settings-full.svg
                        </svg>
                        Admin
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
                <span
                  class="PrivateTabIndicator-root-89 PrivateTabIndicator-colorSecondary-91 MuiTabs-indicator PrivateTabIndicator-vertical-92"
                  style="top: 0px; height: 0px; display: flex;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Sidebar should render admin tab selected 1`] = `
<div>
  <nav
    aria-label="mailbox folders"
  >
    <div
      class="PrivateHiddenCss-smUp-53"
    />
    <div
      class="PrivateHiddenCss-xsDown-51"
    >
      <div
        class="MuiDrawer-root MuiDrawer-docked"
      >
        <div
          class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
        >
          <div
            class="makeStyles-container-47"
          >
            <span
              class="makeStyles-logo-48"
            >
              <svg>
                fc.logo.svg
              </svg>
            </span>
            <div
              class="MuiTabs-root MuiTabs-vertical"
              data-testid="sidebar-wrapper"
            >
              <div
                class="MuiTabs-scroller MuiTabs-fixed"
                style="overflow: hidden;"
              >
                <div
                  aria-label="Sidebar Tabs"
                  class="MuiTabs-flexContainer MuiTabs-flexContainerVertical"
                  role="tablist"
                >
                  <a
                    aria-controls="tabpanel-0"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-0"
                    href="/"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        dashboard.svg
                      </svg>
                      Dashboard
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-1"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-1"
                    href="/projects"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        projects.svg
                      </svg>
                      Projects
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-2"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-2"
                    href="/clients"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        clients.svg
                      </svg>
                      Clients
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-3"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-3"
                    href="/workers"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        workers.svg
                      </svg>
                      Workers
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-4"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-4"
                    href="/invoices"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        invoice.svg
                      </svg>
                      Invoices
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-5"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-5"
                    href="/inventory"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        inventory.svg
                      </svg>
                      Inventory
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-6"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-6"
                    href="/reports"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        reports.svg
                      </svg>
                      Reports
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-7"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-7"
                    href="/security"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        security.svg
                      </svg>
                      Security
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <div
                    class="MuiBox-root MuiBox-root-64"
                    style="margin-top: auto;"
                  >
                    <a
                      aria-controls="tabpanel-8"
                      aria-disabled="false"
                      aria-selected="true"
                      class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-labelIcon"
                      data-testid="tab-8"
                      href="/admin"
                      role="tab"
                      tabindex="0"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        <svg>
                          settings-full.svg
                        </svg>
                        Admin
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
                <span
                  class="PrivateTabIndicator-root-66 PrivateTabIndicator-colorSecondary-68 MuiTabs-indicator PrivateTabIndicator-vertical-69"
                  style="top: 0px; height: 0px; display: flex;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Sidebar should render clients tab selected 1`] = `
<div>
  <nav
    aria-label="mailbox folders"
  >
    <div
      class="PrivateHiddenCss-smUp-30"
    />
    <div
      class="PrivateHiddenCss-xsDown-28"
    >
      <div
        class="MuiDrawer-root MuiDrawer-docked"
      >
        <div
          class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
        >
          <div
            class="makeStyles-container-24"
          >
            <span
              class="makeStyles-logo-25"
            >
              <svg>
                fc.logo.svg
              </svg>
            </span>
            <div
              class="MuiTabs-root MuiTabs-vertical"
              data-testid="sidebar-wrapper"
            >
              <div
                class="MuiTabs-scroller MuiTabs-fixed"
                style="overflow: hidden;"
              >
                <div
                  aria-label="Sidebar Tabs"
                  class="MuiTabs-flexContainer MuiTabs-flexContainerVertical"
                  role="tablist"
                >
                  <a
                    aria-controls="tabpanel-0"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-0"
                    href="/"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        dashboard.svg
                      </svg>
                      Dashboard
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-1"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-1"
                    href="/projects"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        projects.svg
                      </svg>
                      Projects
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-2"
                    aria-disabled="false"
                    aria-selected="true"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-labelIcon"
                    data-testid="tab-2"
                    href="/clients"
                    role="tab"
                    tabindex="0"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        clients.svg
                      </svg>
                      Clients
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-3"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-3"
                    href="/workers"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        workers.svg
                      </svg>
                      Workers
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-4"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-4"
                    href="/invoices"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        invoice.svg
                      </svg>
                      Invoices
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-5"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-5"
                    href="/inventory"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        inventory.svg
                      </svg>
                      Inventory
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-6"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-6"
                    href="/reports"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        reports.svg
                      </svg>
                      Reports
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-7"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-7"
                    href="/security"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        security.svg
                      </svg>
                      Security
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <div
                    class="MuiBox-root MuiBox-root-41"
                    style="margin-top: auto;"
                  >
                    <a
                      aria-controls="tabpanel-8"
                      aria-disabled="false"
                      aria-selected="false"
                      class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                      data-testid="tab-8"
                      href="/admin"
                      role="tab"
                      tabindex="-1"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        <svg>
                          settings-full.svg
                        </svg>
                        Admin
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
                <span
                  class="PrivateTabIndicator-root-43 PrivateTabIndicator-colorSecondary-45 MuiTabs-indicator PrivateTabIndicator-vertical-46"
                  style="top: 0px; height: 0px; display: flex;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;

exports[`Sidebar should render inital route selected 1`] = `
<div>
  <nav
    aria-label="mailbox folders"
  >
    <div
      class="PrivateHiddenCss-smUp-7"
    />
    <div
      class="PrivateHiddenCss-xsDown-5"
    >
      <div
        class="MuiDrawer-root MuiDrawer-docked"
      >
        <div
          class="MuiPaper-root MuiDrawer-paper MuiDrawer-paperAnchorLeft MuiDrawer-paperAnchorDockedLeft MuiPaper-elevation0"
        >
          <div
            class="makeStyles-container-1"
          >
            <span
              class="makeStyles-logo-2"
            >
              <svg>
                fc.logo.svg
              </svg>
            </span>
            <div
              class="MuiTabs-root MuiTabs-vertical"
              data-testid="sidebar-wrapper"
            >
              <div
                class="MuiTabs-scroller MuiTabs-fixed"
                style="overflow: hidden;"
              >
                <div
                  aria-label="Sidebar Tabs"
                  class="MuiTabs-flexContainer MuiTabs-flexContainerVertical"
                  role="tablist"
                >
                  <a
                    aria-controls="tabpanel-0"
                    aria-disabled="false"
                    aria-selected="true"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit Mui-selected MuiTab-labelIcon"
                    data-testid="tab-0"
                    href="/"
                    role="tab"
                    tabindex="0"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        dashboard.svg
                      </svg>
                      Dashboard
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-1"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-1"
                    href="/projects"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        projects.svg
                      </svg>
                      Projects
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-2"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-2"
                    href="/clients"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        clients.svg
                      </svg>
                      Clients
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-3"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-3"
                    href="/workers"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        workers.svg
                      </svg>
                      Workers
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-4"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-4"
                    href="/invoices"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        invoice.svg
                      </svg>
                      Invoices
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-5"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-5"
                    href="/inventory"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        inventory.svg
                      </svg>
                      Inventory
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-6"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-6"
                    href="/reports"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        reports.svg
                      </svg>
                      Reports
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <a
                    aria-controls="tabpanel-7"
                    aria-disabled="false"
                    aria-selected="false"
                    class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                    data-testid="tab-7"
                    href="/security"
                    role="tab"
                    tabindex="-1"
                  >
                    <span
                      class="MuiTab-wrapper"
                    >
                      <svg>
                        security.svg
                      </svg>
                      Security
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                  <div
                    class="MuiBox-root MuiBox-root-18"
                    style="margin-top: auto;"
                  >
                    <a
                      aria-controls="tabpanel-8"
                      aria-disabled="false"
                      aria-selected="false"
                      class="MuiButtonBase-root MuiTab-root MuiTab-textColorInherit MuiTab-labelIcon"
                      data-testid="tab-8"
                      href="/admin"
                      role="tab"
                      tabindex="-1"
                    >
                      <span
                        class="MuiTab-wrapper"
                      >
                        <svg>
                          settings-full.svg
                        </svg>
                        Admin
                      </span>
                      <span
                        class="MuiTouchRipple-root"
                      />
                    </a>
                  </div>
                </div>
                <span
                  class="PrivateTabIndicator-root-20 PrivateTabIndicator-colorSecondary-22 MuiTabs-indicator PrivateTabIndicator-vertical-23"
                  style="top: 0px; height: 0px; display: flex;"
                />
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </nav>
</div>
`;
